[ADD] DELETE project/:projectId endpoint
