# assets/api.yml
@@ -58,6 +58,33 @@ paths:
         500:
           $ref: '#/components/responses/500'
 
+  /project/{projectId}:
+    delete:
+      summary: Delete a project by ID
+      description: Allows an owner of a project or an admin to delete a project.
+      tags:
+        - Projects
+      parameters:
+        - in: path
+          name: projectId
+          schema:
+            type: string
+          required: true
+          description: uuid of the project to delete
+      responses:
+        200:
+          $ref: '#/components/responses/deleteProject'
+        400:
+          $ref: '#/components/responses/400'
+        404:
+          $ref: '#/components/responses/404'
+        409:
+          $ref: '#/components/responses/409'
+        415:
+          $ref: '#/components/responses/415'
+        500:
+          $ref: '#/components/responses/500'
+
   # STATUS
   /health:
     get:
@@ -139,6 +166,13 @@ components:
           schema:
             $ref: '#/components/schemas/ProjectId'
 
+    deleteProject:
+      description: Project deleted successfully.
+      content:
+        application/json:
+          schema:
+            $ref: '#/components/schemas/ProjectId'
+
     # STATUS
     health:
       description: Microservice general health state reported.
@@ -162,7 +196,6 @@ components:
         application/json:
           schema:
             $ref: '#/components/schemas/PostProjectData'
-
   # ---------------------------------------------------------------------------
   schemas:
     # GENERAL
